--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/zZ1RPBS7/IGRas26Blw7zicpYbT8FJj6kcOQqwN/rI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sistem_penerimaan_pkl_app
+DB_DATABASE=db_sistem_penerimaan_pkl_app
 DB_USERNAME=root
 DB_PASSWORD=
 
